--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -41,7 +41,7 @@
       <p>Venha para a maior comunidade de adoções de animais do Brasil! :)</p>
     </div>
     <div class="card-action">
-      <%= link_to "Cadastre-se!", new_user_path, id: "signup-box-button" %>
+      <%= link_to "Cadastre-se!", new_user_path, id: "signup-box-button", class: 'btn' %>
     </div>
   </div>
 </div>
