--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -9,3 +9,15 @@ div#message
   margin: 20px 0 20px 0;
   color: #000000;
 } 
+
+#messages-card {
+    text-align: center;
+    width: 80% !important;
+    margin-left: 10%;
+    margin: 30px 0 0 10%;
+}
+
+#new-message-btn {
+    width: 20%;
+    margin: 30px 0 0 5%;
+}
