--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -12,15 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :text %><br>
+    <%= f.label :text, "Texto" %><br>
     <%= f.text_field :text %>
   </div>
  <div class="field">                
                                           
-     <%= f.label :receiver_id %><br>
+     <%= f.label :receiver_id, "Receptor (informe o nome completo)" %><br>
      <%= f.text_field :receiver_name %>
  </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Enviar mensagem", class: 'btn', style: 'margin: 30px 0 0 40% !important' %>
   </div>
 <% end %>
