--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Message</h1>
+<div class="col s12" id="messages-card">
+  <div class="card yellow darken-3">
+    <div class="card-content white-text">
+      <span class="card-title">Nova mensagem</span>
+    </div>
+  </div>
+</div>
 
-<%= render 'form' %>
+<div class="new-message-form">
+    <%= render 'form' %>
+</div>
 
-<%= link_to 'Back', messages_path %>
+<%= link_to 'Back', messages_path, class: 'btn', id: 'new-message-btn' %>
