Improving layout of posts index and messages views

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -59,13 +59,13 @@
   margin-left: 2%;
 }
 
-#post-info > p {
+/*#post-info > p {
   color: black;
-}
+}*/
 
-#post-info > h3 {
+/*#post-info > h3 {
   color: black;
-}
+}*/
 
 #post-content-box {
   margin-top: 10px;
