--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -26,3 +26,12 @@ div#message
     width: 60%;
     margin-left: 20%;
 }
+
+#text-message {
+  color: white;
+}
+
+#message-sent-box {
+  width: 80%;
+  margin: 30px 0 0 10%;
+}
