Create notification for report

--- a/app/views/notifications/_show.html.erb
+++ b/app/views/notifications/_show.html.erb
@@ -2,7 +2,7 @@
 
 	<% @notifications.each do |notification| %>
     
-    	<p><%= notification.content %>: <%= notification.kind %></p>
+    	<p><%= notification.content %></p>
 
 	<% end %>
 
