Creating method for ordenation
Signed-off-by: jessicacris <jessica.cris1127@gmail.com>
Signed-off-by: Victor Navarro <victor.matias.navarro@gmail.com>

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,6 +20,13 @@
   <% end %>
 </div>
 
+<div class="type">
+  <%= form_tag "/search_by_kind", id:"ordenation-kind", method: :get do %>
+    <%= select_tag(:kind, options_for_select(Animal.all.collect { |u| u.kind }), {:prompt => 'Filter by kind'}) %>
+  <%= submit_tag 'Go!' %>
+  <% end %>
+</div>
+
 <table>
   <tbody>
     <% @posts.each do |post| %>
