--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,6 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#ordenation-kind {
+  margin: 0 0 0 3%;
+  width: 40%;
+}
+
+
 #post-card {
   width: 50%;
   margin: 0 auto;
