--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="col s12" id="messages-card">
-  <div class="card blue-grey darken-3">
+  <div class="card yellow darken-3">
     <div class="card-content white-text">
-      <span class="card-title"><strong>Lista de Mensagens Recebidas</strong></span>
+      <span class="card-title">Mensagens recebidas</span>
     </div>
   </div>
 </div>
