--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -31,13 +31,15 @@
 }
 
 #interested-btn {
-  width: 200px;
-  margin-left: 43%;
+  width: 400px;
+  margin-left: 30%;
+  margin-bottom: 10px;
 }
 
 #uninterested-btn {
   width: 400px;
-  margin-left: 40%;
+  margin-left: 30%;
+  margin-bottom: 10px;
   text-overflow: break-line;
 }
 
